# TileDB-BioImaging

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  OMETiff-convertor-demo.ipynb  README.md  _quarto.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  quarto-render.yml  release.yml
.ipynb_checkpoints/: OMETiff-converter-test-checkpoint.ipynb  OMETiff-convertor-demo-checkpoint.ipynb  ome-tiff-demo-checkpoint.ipynb
CMU-1-Small-Region.tiledb/l_0.tdb/__fragments/__1661264109101_1661264109101_e137a8a245a84f62a2d2bea63d067a9b_14/: __fragment_metadata.tdb
CMU-1-Small-Region.tiledb/l_1.tdb/__fragments/__1661264109182_1661264109182_8e74816e5ab742f38cc1570ca142c32e_14/: __fragment_metadata.tdb
CMU-1-Small-Region.tiledb/l_2.tdb/__fragments/__1661264109248_1661264109248_bfc3a9f3312b4169850005f6add78e73_14/: __fragment_metadata.tdb
data/CMU-1-Small-Region-Zarr.tiledb/__group/: __1661541316206_1661541316206_6cb4cfbfb0ed4da4888e164b3529a66d
data/CMU-1-Small-Region-Zarr.tiledb/__meta/: __1661541316205_1661541316205_4456ab421ef0482ea28e60418c7a0a36
data/CMU-1-Small-Region.ome.zarr/0/0/: .zarray
data/CMU-1-Small-Region.tiledb/__meta/: __1661524498667_1661524498667_3928625d0a8448b481ebd1121c502af5
deephistopath/: __init__.py  filter.py  slide.py  tiles.py  util.py
deephistopath/wsi/: __init__.py  filter.py  slide.py  tiles.py
docs/: conf.py  index.html  index.rst  modules.rst  requirements.txt  search.json  sitemap.xml  tiledb.bioimg.converters.rst  tiledb.bioimg.rst  tiledbimg.converters.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  setup.doctree  tests.doctree  tests.integration.converters.doctree  tests.integration.doctree  tests.unit.doctree  tiledbimg.converters.doctree  tiledbimg.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  tests.html  tests.integration.converters.html  tests.integration.html  tests.unit.html  tiledbimg.converters.html  tiledbimg.html
docs/_build/html/_sources/: tests.integration.converters.rst.txt  tests.integration.rst.txt  (+3 more)
docs/documentation/: index.html
docs/documentation/api/: TileDBOpenSlide.html  from_bioimg.html  index.html  ome_tiff.OMETiffConverter.html  ome_zarr.OMEZarrConverter.html  openslide.OpenSlideConverter.html  to_bioimg.html
docs/documentation/examples/: OMETiff-Converter-Demo.html  OMEZarr-Converter-Demo.html
docs/site_libs/bootstrap/: bootstrap-35462df94c895d64f0e5623e13e081c7.min.css  bootstrap-87cf2719b8a7a1a990e78361a5e7bf46.min.css  bootstrap-88258c264e460c1281db3157bec3a6ef.min.css  bootstrap-ae056876da75ada0943474c397883d0a.min.css  bootstrap-b607d9dddbe1df7ddbefab684f5bdecb.min.css  bootstrap-f1a0d3ef7b4940f8a6601399de0645a2.min.css  bootstrap.min.css
documentation/: index.qmd
documentation/examples/: OMETiff-Converter-Demo.qmd  OMEZarr-Converter-Demo.qmd
examples/: OMETiff-convertor-demo.ipynb  OMEZarr-convertor-demo.ipynb
examples/.ipynb_checkpoints/: OMETiff-convertor-demo-checkpoint.ipynb
format_spec/: FORMAT_SPEC.md  array_file_hierarchy.md  array_schema.md  fragment.md  metadata.md
quarto/: Makefile  _quarto.yml  _sidebar.yml  index.qmd  objects.json
quarto-materials/: _variables.scss  getTheme.html  react.html  tiledb.scss
quarto/quarto-materials/: tiledb.scss
spec/: specification.md
tests/: __init__.py  test_ome_tiff.py  test_ome_zarr.py  test_openslide.py
tests/data/: rand_uint16.ome.tiff
tests/data/ome-metadata/: hcs.ome.xml  one-screen-one-plate-four-wells.ome.xml  two-screens-two-plates-four-wells.ome.xml
tests/integration/: test_wrappers.py
tests/integration/converters/: __init__.py  test_nifti.py  test_ome.py  test_ome_tiff.py  test_ome_tiff_experimental.py  test_ome_zarr.py  test_openslide.py  test_png.py  test_scaler.py
tests/unit/: test_axes.py  test_helpers.py  test_ngff.py  test_openslide.py  test_tiles.py
tests/unit/converters/: test_ome_tiff.py  test_ome_zarr.py  test_openslide.py
tiledb/: openslide.py
tiledb/bioimg/: __init__.py  compressor_factory.py  constants.py  helpers.py  metadata.py  openslide.py  plugin_manager.py  types.py  visualization.py  wrappers.py
tiledb/bioimg/converters/: __init__.py  axes.py  base.py  io.py  metadata.py  nifti.py  ome_tiff.py  ome_zarr.py  openslide.py  png.py  scale.py  tiff_helpers.py  tiles.py  webp.py
tiledb/bioimg/utils/: tiles_server.py
tiledb/bioimg/visualization/: helpers.py
tiledbimg/: __init__.py  open_slide.py  openslide.py  test_ome_tiff.py  test_ome_zarr.py  test_openslide.py  version.py
tiledbimg/.ipynb_checkpoints/: OMETiff-converter-test-checkpoint.ipynb  ome-tiff-demo-checkpoint.ipynb  test_OMETiffConverter-checkpoint.ipynb
tiledbimg/converters/: axes.py  base.py  isyntax.py  ome_tiff.py  ome_zarr.py  openslide.py  tiff.py
tiledbimg/util/: __init__.py  common.py  convert_ome_zarr.py  convert_openslide.py  convert_tiff.py
util/: convert_openslide.py
(+105 files in other folders)
