[metadata]
name = tiledbimg
description = Package supports all bio-imaging functionality provided by TileDB
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = tiledb, tiledbimg , bioimaging
url = https://github.com/TileDB-Inc/TileDB-Bioimaging
platform = any
project_urls =
    Bug Tracker = https://github.com/TileDB-Inc/TileDB-Bioimaging/issues
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7
test_suite = tests

[aliases]
test=pytest

[flake8]
statistics = true
ignore = E203, E501, W503, B950
select = B,C,E,F,W,T4,B9
