[metadata]
name = tiledb-bioimg
description = Package supports all bio-imaging functionality provided by TileDB
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = tiledb, bioimaging
url = https://github.com/TileDB-Inc/TileDB-Bioimaging
platform = any
project_urls =
    Bug Tracker = https://github.com/TileDB-Inc/TileDB-Bioimaging/issues
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7
test_suite = tests

[aliases]
test=pytest

[flake8]
statistics = true
ignore = E203, E501, W503, B950
select = B,C,E,F,W,T4,B9

[isort]
known_third_party=tiledb.cloud

[mypy]
show_error_codes = True
ignore_missing_imports = True

# Disallow dynamic typing
#disallow_any_decorated = True
#disallow_any_unimported = True
#disallow_any_expr = True
#disallow_any_explicit = True
disallow_any_generics = True
#disallow_subclassing_any = True

# Untyped definitions and calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# None and Optional handling
no_implicit_optional = True
strict_optional = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

# Miscellaneous strictness flags
implicit_reexport = True
strict_equality = True

[mypy-tests.*]
ignore_errors = True